
    o	as.data.frame.list() could fail on some unusual list names.
	(PR#6782)

    o	type.convert() ignored na.strings when no conversion was done.
	(PR#6781, not needed for its primary use in read.table.)

    o	src/modules/X11/dataentry.c would not build on some XFree
	4.4.0 systems.  (This is a bug in their header files but we have
	added a workaround.)

    o   Fixed the clipping problem in the quartz device.

    o   Subsetting a factor swapped the order of the attributes, which
	identical() cares about.  (PR#6799)

    o   The L-BFGS-B option of optim() apparently needs part of its
	workspace zeroed.  (PR#6720)

    o   extractAIC.survreg needed updating.

    o   When using the header Rmath.h in standalone mode, the case where
        TRUE, FALSE are already defined is now handled correctly.

    o	Package utils now exports several functions that are needed for
        writing Sweave drivers.

    o	Comparison of two lists/expressions was giving nonsensical
	(and often random) answers, and is now an error.

    o	The C-level function ncols was returning a random answer
	(often 0) for a 1D array.  This caused model.matrix to
	misbehave (perhaps segfault) if a term was a 1D array.  (PR#6838)

    o   The configure script now finds the pdf viewers ggv and gpdf.


		CHANGES IN R VERSION 1.9.0


USER-VISIBLE CHANGES

    o	Underscore '_' is now allowed in syntactically valid names, and
	make.names() no longer changes underscores.  Very old code
	that makes use of underscore for assignment may now give
	confusing error messages.

    o	Package 'base' has been split into packages 'base', 'graphics',
	'stats' and 'utils'.  All four are loaded in a default
	installation, but the separation allows a 'lean and mean'
	version of R to be used for tasks such as building indices.

	Packages ctest, eda, modreg, mva, nls, stepfun and ts have been
	merged into stats, and lqs has been returned to MASS.  In all
	cases a stub has been left that will issue a warning and ensure